Fix creator icon display spacing.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -253,6 +253,10 @@ body {
 .user-figure {
     text-align: center;
     padding: 1rem;
+    flex-shrink: 1;
+    flex-grow: 1;
+    min-width: 15%;
+    max-width: 100%;
 }
 
 @media (max-width: 679px) {
